# ai-dacon

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
artifacts/final/: SCORES.md  config.yaml  internvl3_8b.config.resolved.json  internvl3_8b.csv  internvl3_8b.submission.json  internvl3_8b.timing.json  qwen25vl_7b.csv  qwen25vl_7b.submission.json  qwen3vl_8b.csv  (+16 more)
configs/: default.yaml
docs/: competition_notes.md  prompt_strategy.md  reproducibility.md
scripts/: auto_submit_next_window.sh  make_submission.py  prepare_data.py  reproduce_submission.py  run_inference.py  submit_dacon.py  validate_local.py  validate_submission.py
tests/: test_auto_submit_pool.py  test_bias_guarded_v2.py  test_dacon_submit.py  test_dataset.py  test_ensemble_predict.py  test_evidence_only_prompt.py  test_evidence_receipt_prompt.py  test_execution_gaps.py  test_final_config.py  test_internvl3.py  test_make_submission_gate.py  test_metrics.py  test_parsers.py  test_predictor_retry.py  test_prompt_builder.py  test_qwen3_vl.py  test_qwen3_vl_message.py  test_qwen3vl_32b_config.py  test_qwen3vl_bgv2_config.py  test_qwen3vl_ensemble_config.py  test_qwen3vl_evidence_only_config.py  test_qwen3vl_evidence_receipt_config.py  test_qwen3vl_hires_config.py  test_qwen3vl_lowres_config.py  test_qwen_config.py  test_qwen_evidence_config.py  test_qwen_highres_config.py  test_run_inference_ensemble.py  test_strict_prompt_config.py  test_submission_schema.py  test_submit_dacon_cli.py  test_submit_dry_run.py  test_synthesis_prompt.py  test_unknown_mapper.py  test_validate_local.py
(+52 files in other folders)
